# AluminatAI

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  Dockerfile.test  LICENSE  NOTICE  README.md  SECURITY.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  pyproject.toml  tsconfig.ci.json  tsconfig.ci.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.claude/projects/-Users-rizz-AluminatiAi/memory/: project_greentune_dataset.md
.github/workflows/: ci.yml  docker.yml  publish-pypi.yml
agent/: GETTING_STARTED.md  README.md  __init__.py  ab.py  agent.py  aluminati_agent.py  amd_collector.py  baseline.py  benchmark_m5.py  cli.py  collector.py  command_receiver.py  config.py  dcgm_probe.py  gpu_collector.py  install.sh  main.py  metrics_server.py  optimize.py  pyproject.toml  recommend.py  recommendation_reporter.py  requirements.txt  tag_client.py  uploader.py
agent/attribution/: __init__.py  engine.py  pid_resolver.py  process_probe.py  rules.py
agent/demos/: __init__.py  investor_demo.py  scaling_report.py
agent/demos/workloads/: __init__.py  idle_loader.py  matmul_workload.py  resnet_workload.py
agent/efficiency/: __init__.py  curve_builder.py  gpu_specs.py  hardware_match.py  power_control.py  profiler.py  rapl.py
agent/finetune/: AMD_SETUP_GUIDE.md  HACKATHON_SUBMISSION.md  energy_callback.py  eval_model.py  greentune.py  rocm_power.py  verify_rocm.py
agent/integrations/: __init__.py  mlflow_callback.py  otel_exporter.py  wandb_callback.py
agent/intelligence/: __init__.py  cli.py  pipeline.py
agent/learner/: bandit.py  experience_logger.py
agent/schedulers/: __init__.py  base.py  detect.py  kubernetes.py  runai.py  slurm.py
agent/storage/: tsdb.py
agent/tests/: AluminatAI_A100_Test.ipynb  H100_TEST_WALKTHROUGH.md  benchmark_overhead.py  multi_workload_attribution.py  powercap_ab_test.py  runpod_demo.py  test_attribution.py  test_collector.py  test_new_features.py  validate_energy.py
app/: error.tsx  global-error.tsx  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts  twitter-image.tsx
app/admin/: layout.tsx
app/admin/_components/: AdminShell.tsx
app/admin/agent-health/: page.tsx
app/admin/financial-advisor/: page.tsx
app/admin/fine-tuning/: page.tsx
app/admin/lawyer/: page.tsx
app/admin/outreach/: page.tsx
app/admin/swarm/: page.tsx
app/api/admin/agent-health/: route.ts
app/api/admin/financial-advisor/: route.ts
app/api/admin/fine-tuning/: route.ts
app/api/admin/lawyer/: route.ts
app/api/admin/prospect-scraper/: route.ts
app/api/admin/sla/: route.ts
app/api/admin/swarm-status/: route.ts
app/api/agent/agents/: route.ts
app/api/agent/commands/: route.ts
app/api/agent/errors/: route.ts
app/api/agent/experience/: route.ts
app/api/agent/fleet-state/: route.ts
app/api/agent/heartbeat/: route.ts
app/api/agent/recommendations/: route.ts
app/api/audit-log/: route.ts
app/api/benchmarks/hardware/: route.ts
app/api/benchmarks/leaderboard/: route.ts
app/api/benchmarks/percentile/: route.ts
app/api/benchmarks/submit/: route.ts
app/api/budgets/: route.ts
app/api/carbon/intensity/: route.ts
app/api/carbon/leaderboard/: route.ts
app/api/notifications/: route.ts
app/api/organizations/: route.ts
app/api/recommendations/: route.ts
app/api/teams/: route.ts
app/api/webhooks/: route.ts
app/benchmarks/: layout.tsx  page.tsx
app/carbon/: page.tsx
app/dashboard/: error.tsx  page.tsx
app/dashboard/activity/: page.tsx
app/dashboard/advisor/: page.tsx
app/dashboard/audit/: page.tsx
app/dashboard/org/: page.tsx
app/dashboard/settings/: page.tsx
app/enterprise/: page.tsx
app/pricing/: page.tsx
components/: ChartErrorBoundary.tsx  ErrorFallback.tsx  Footer.tsx
components/dashboard/: ActivityFeedCard.tsx  AgentsPanel.tsx  BenchmarkPercentileCard.tsx  CarbonExportButton.tsx  ClusterFilter.tsx  CostBreakdownPanel.tsx  CostTrendChart.tsx  DateRangePicker.tsx  JobDetailDrawer.tsx  JobsCarbonTable.tsx  NotificationBell.tsx  NotificationPreferences.tsx  OrgSwitcher.tsx  RecommendationsCard.tsx  SavingsCard.tsx  StatCard.tsx  UtilizationHeatmap.tsx  WasteAlerts.tsx
database/migrations/: 025_machine_identity.sql  026_metrics_machine_fields.sql  027_cluster_summary_view.sql  028_benchmarks.sql  029_carbon.sql  030_carbon_leaderboard.sql  031_green_ai_index.sql  032_cost_rates.sql  033_budgets.sql  034_waste_detection.sql  035_gpu_reference_pricing.sql  036_teams_rbac.sql  037_webhooks.sql  038_data_retention.sql  039_slack_and_exports.sql  040_subscriptions.sql  041_onboarding_drip.sql  042_notifications.sql  043_organizations.sql  044_audit_log.sql  045_prospects.sql  046_agent_health.sql  047_recommendations.sql  048_swarm_production.sql  049_marketing_posts_rls.sql  050_prospect_seed_200.sql  051_experience_log.sql  052_bandit_models.sql  053_model_registry.sql  054_gpu_price_history.sql  055_model_registry_quant.sql
deploy/: aluminatai-agent.env.example  aluminatai-agent.service  daemonset.yaml  docker-compose.yml  nemulai-agent.env.example  nemulai-agent.service  rbac.yaml  slurm-epilogue.sh  slurm-prologue.sh
deploy/grafana/: cost-tracking.json  gpu-overview.json
deploy/terraform/: examples.tfvars  provider.tf  resources.tf
lib/: api-auth.ts  apify.ts  audit.ts  auth-helpers.ts  cost.ts  crypto.ts  notifications.ts  org-auth.ts  plans.ts  rate-limiter.ts  rbac.ts  safe-error.ts  supabase-client.ts  supabase-server.ts  use-event-source.ts  webhooks.ts
minimax-scheduler/: HACKATHON_NOTES.md  QUICKSTART.md  README.md
minimax-scheduler/backend/: api.py  demo.py  minimax.py  models.py  simple_api.py
tests/: setup.ts
tests/api/: activity-feed.test.ts  audit-log.test.ts  cost-savings.test.ts  cron-agent-health.test.ts  cron-budget-alerts.test.ts  cron-email-drip.test.ts  dashboard-today-cost.test.ts  metrics-ingest.test.ts  notifications.test.ts  recommendation-pipeline.test.ts  recommendations-expire.test.ts  stripe-webhook.test.ts
tests/helpers/: mock-request.ts  mock-supabase.ts
tests/mocks/: next-server.ts
(+56 files in other folders)
