[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aluminatai-agent"
version = "0.2.0"
description = "GPU energy monitoring agent with per-job attribution"
requires-python = ">=3.9"
dependencies = [
    "nvidia-ml-py3>=11.0",
    "requests>=2.28",
    "rich>=13",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=26"]
prometheus = ["prometheus-client>=0.20"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
aluminatai-agent = "agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.setuptools.package-data]
"agent" = ["py.typed"]
