[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aluminatai-agent"
version = "0.2.0"
description = "GPU energy monitoring agent with per-job attribution"
requires-python = ">=3.9"
dependencies = [
    "nvidia-ml-py3>=11.0",   # same API as pynvml; requirements.txt pins pynvml==11.5.0
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rich>=13.9",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=26"]
prometheus = ["prometheus-client>=0.20"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
aluminatai-agent = "agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.setuptools.package-data]
"agent" = ["py.typed"]
