# Root pyproject.toml — delegates to agent/pyproject.toml
# The installable Python package lives in agent/.
# To install from source:
#
#   cd agent && pip install -e .
#
# To install the published package:
#
#   pip install nemulai
#
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemulai"
version = "0.2.1"
description = "GPU energy monitoring agent — per-job cost attribution for AI teams"
readme = "agent/README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["gpu", "monitoring", "energy", "mlops", "cost", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.19"]

[project.scripts]
nemulai = "nemulai.cli:main"

[project.urls]
Homepage = "https://nemulai.com"
Documentation = "https://nemulai.com/docs/agent"
Repository = "https://github.com/AgentMulder404/NemulAI"
"Bug Tracker" = "https://github.com/AgentMulder404/NemulAI/issues"

[tool.setuptools]
packages = [
    "nemulai",
    "nemulai.attribution",
    "nemulai.integrations",
    "nemulai.schedulers",
    "nemulai.efficiency",
]

[tool.setuptools.package-dir]
nemulai               = "agent"
"nemulai.attribution"  = "agent/attribution"
"nemulai.integrations" = "agent/integrations"
"nemulai.schedulers"   = "agent/schedulers"
"nemulai.efficiency"   = "agent/efficiency"

[tool.setuptools.package-data]
"nemulai" = ["*.txt", "*.md"]
