[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemulai"
version = "0.2.2"
description = "GPU energy monitoring agent — per-job cost attribution for AI teams"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["gpu", "monitoring", "energy", "mlops", "cost", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
prometheus    = ["prometheus-client>=0.19"]
secure        = ["cryptography>=42.0"]
observability = ["PyYAML>=6.0"]
benchmark     = ["numpy>=1.24"]
# dcgm bindings ship with the NVIDIA DCGM system package, not PyPI.
# Install the system package first: apt install datacenter-gpu-manager
# then add /usr/lib/dcgm/bindings/python3 to PYTHONPATH, or install the
# unofficial wrapper: pip install pydcgm  (if available for your DCGM version)
dcgm          = ["pydcgm>=3.0"]
learner       = ["vowpalwabbit>=9.9"]
all           = ["prometheus-client>=0.19", "cryptography>=42.0", "PyYAML>=6.0", "numpy>=1.24", "vowpalwabbit>=9.9"]

[project.scripts]
nemulai = "nemulai.cli:main"

[project.urls]
Homepage = "https://nemulai.com"
Documentation = "https://nemulai.com/docs/agent"
Repository = "https://github.com/AgentMulder404/NemulAI"
"Bug Tracker" = "https://github.com/AgentMulder404/NemulAI/issues"

# Map the Python package `nemulai` to the files in this directory (agent/).
# All sibling directories that have __init__.py become subpackages.
[tool.setuptools]
packages = [
    "nemulai",
    "nemulai.attribution",
    "nemulai.integrations",
    "nemulai.schedulers",
    "nemulai.efficiency",
    "nemulai.learner",
    "nemulai.intelligence",
]

[tool.setuptools.package-dir]
nemulai               = "."
"nemulai.attribution"  = "attribution"
"nemulai.integrations" = "integrations"
"nemulai.schedulers"   = "schedulers"
"nemulai.efficiency"   = "efficiency"
"nemulai.learner"      = "learner"
"nemulai.intelligence" = "intelligence"

[tool.setuptools.package-data]
"nemulai" = ["*.txt", "*.md"]
